kustomize/httpbin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  labels:
    app.kubernetes.io/name: httpbin
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: httpbin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: httpbin
    spec:
      containers:
        - name: httpbin
          image: "kennethreitz/httpbin"
          ports:
            - containerPort: 80
              name: http
