kustomize/httpbin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
spec:
  selector:
    app.kubernetes.io/name: httpbin
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
